KM-1201 service page

--- a/public/content/hr/contact-us.html
+++ b/public/content/hr/contact-us.html
@@ -63,10 +63,13 @@
                                                 <a href="why-to-choose-us.html"><span>Why to choose us</span></a>
                                             </li> -->
                                             <li class="current_page_item">
-                                                <a href="contact-us.html"><span>Contact us</span></a>
+                                                <a href="/public/services.html" target="_self"><span>Service</span></a>
+                                            </li>
+                                            <li class="current_page_item">
+                                                <a href="contact-us.html" target="_self"><span>Contact us</span></a>
                                             </li>
                                         </ul>
-                                    </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
+                                    </nav><a class="responsive-menu-toggle" href="#" target="_self"><i class="icon-menu"></i></a>
                                 </div>
                                 <div class="secondary_menu_wrapper"></div>
                                 <div class="banner_wrapper"></div>
