KM-1201 service page

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,13 @@
     <!-- Favicons -->
     <link rel="shortcut icon" href="content/hr/images/hr.png">
 
+    <!--  pe-icon-7 -->
+    <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/pe-icon-7-stroke.css">
+
+    <!-- Optional - Adds useful class to manipulate icon font display -->
+    <link rel="stylesheet" href="path/to/pe-icon-7-stroke/css/helper.css">
+
+
 
     <!-- FONTS -->
     <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Roboto:100,300,400,400italic,700'>
@@ -124,11 +131,7 @@
                                             href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
                                                 class="button_label">Book a Call</span></a>
                                     </div>
-                                    <!-- <div class="column mcb-column one-second column_placeholder">
-                                        <div class="placeholder">
-                                            &nbsp;
-                                        </div>
-                                    </div> -->
+                                  
                                 </div>
                             </div>
                         </div>
@@ -149,7 +152,7 @@
                                             enhancing your operational efficiency and boosting your bottom line.</h6>
                                             <div class="wrap mcb-wrap one  valign-top clearfix">
                                                 <div class="mcb-wrap-inner">
-                                                    <a href="services.html#recruiting" target="_self">
+                                                    <a href="services.html" target="_self">
                                                         <div class="column mcb-column one-third column_column ">
                                                             <div class="column_attr align_center"
                                                                 style="padding:60px 13% 45px; border: 3px solid #5c91b4; margin: 0 2%;">
@@ -161,8 +164,8 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4><a href="services.html" target="_self">STRATEGIC
-                                                                        RECRUITING</a></h4>
+                                                                <h4>STRATEGIC
+                                                                        RECRUITING</h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
                                                                     We understand the power of having the right talent
@@ -175,7 +178,7 @@
                                                             </div>
                                                         </div>
                                                     </a>
-                                                    <a href="services.html#empowerment" target="_self">
+                                                    <a href="services.html" target="_self">
                                                         <div class="column mcb-column one-third column_column ">
                                                             <div class="column_attr align_center"
                                                                 style="padding:60px 13% 45px; border: 3px solid #5c91b4; margin: 0 2%;">
@@ -188,8 +191,8 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4><a href="services.html" target="_self">EMPOWERMENT
-                                                                        COACHING</a></h4>
+                                                                <h4>EMPOWERMENT
+                                                                        COACHING</h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
                                                                     Elevate your team's efficiency and performance
@@ -203,7 +206,7 @@
                                                             </div>
                                                         </div>
                                                     </a>
-                                                    <a href="services.html#job_seeker" target="_self">
+                                                    <a href="services.html" target="_self">
                                                         <div class="column mcb-column one-third column_column ">
                                                             <div class="column_attr align_center"
                                                                 style="padding:60px 13% 45px; border: 3px solid #5c91b4; margin: 0 2%;">
