KM-1260 colors changed

--- a/public/index.html
+++ b/public/index.html
@@ -38,7 +38,7 @@
     <link rel='stylesheet' href='css/global.css'>
     <link rel='stylesheet' href='content/hr/css/structure.css'>
     <link rel='stylesheet' href='content/hr/css/hr.css'>
-    <link rel='stylesheet' href='content/hr/css/custom.css'>
+    <link rel='stylesheet' href='css/custom.css'>
 
     <!-- Revolution Slider -->
 
@@ -50,8 +50,7 @@
     <div id="Wrapper">
         <div id="Header_wrapper" class="bg-parallax" data-enllax-ratio="0.3">
             <header id="Header">
-                <div class="header_placeholder"></div>
-                <div id="Top_bar">
+                <div id="Top_bar" style="background-color: #2A71BC;">
                     <div class="container">
                         <div class="column one">
                             <div class="top_bar_left clearfix">
@@ -65,21 +64,7 @@
                                 <div class="menu_wrapper">
                                     <nav id="menu" class="menu-main-menu-container">
                                         <ul id="menu-main-menu" class="menu">
-                                            <!-- <li class="current_page_item">
-                                                <a href="index.html"><span>Home</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="content/hr/recruiting.html"><span>Recruiting</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="content/hr/coaching.html"><span>Coaching</span></a>
-                                            </li>
-                                            <li>
-                                                <a href="content/hr/why-to-choose-us.html"><span>Why to choose us</span></a>
-                                            </li> -->
-                                            <!-- <li>
-                                                <a href="content/hr/contact-us.html"><span>Contact us</span></a>
-                                            </li> -->
+
                                         </ul>
                                     </nav><a class="responsive-menu-toggle" href="#"><i class="icon-menu"></i></a>
                                 </div>
@@ -95,8 +80,8 @@
                                     </form>
                                 </div>
                             </div>
-                            <div class="top_bar_right">
-                                <div class="top_bar_right_wrapper">
+                            <div class="top_bar_right" >
+                                <div class="top_bar_right_wrapper" >
                                     <a href="services.html" target="_self"
                                         class="button button_theme button_js action_button"><span
                                             class="button_label">Services</span></a>
@@ -110,15 +95,16 @@
                 </div>
                 <div class="mfn-main-slider" id="mfn-rev-slider">
                     <div class="section mcb-section"
-                        style="padding-top:100px; padding-bottom:60px; background-color:#e1e4e6; background-image:url(content/hr/images/home_hr_sectionbg1.jpg); background-repeat:no-repeat; background-position:center top;">
+                        style="padding-top:100px; padding-bottom:60px; background-color:#000;  background-position:center top;">
                         <div class="section_wrapper mcb-section-inner">
                             <div class="wrap mcb-wrap one  valign-top clearfix">
                                 <div class="mcb-wrap-inner">
 
                                     <div class="column mcb-column column_column ">
 
-                                        <h1>Welcome to MetanoiaHR</h1>
-                                        <h2>Elevating Your Business through Strategic HR Solutions.</h2>
+                                        <h1 style="color: #fff;">Welcome to MetanoiaHR</h1>
+                                        <h2 style="color: #fff;">Elevating Your Business through Strategic HR Solutions.
+                                        </h2>
                                         <p>
                                             At MetanoiaHR, we're not just an HR company – we're your partners in growth.
                                             Our mission is to empower small and medium-sized businesses across North
@@ -129,9 +115,11 @@
                                         <hr class="no_line" style="margin: 0 auto 30px;" />
                                         <a class="button  button_theme button_js"
                                             href="https://calendly.com/metanoiahr/metanoia-chat-with-abdullah"><span
-                                                class="button_label">Book a Call</span></a>
+                                                class="button_label"
+                                                style="background-color: #fff; color: #000;border-radius: 5%;">Book a
+                                                Call</span></a>
                                     </div>
-                                  
+
                                 </div>
                             </div>
                         </div>
@@ -152,10 +140,10 @@
                                             enhancing your operational efficiency and boosting your bottom line.</h6>
                                             <div class="wrap mcb-wrap one  valign-top clearfix">
                                                 <div class="mcb-wrap-inner">
-                                                    <a href="services.html" target="_self">
+                                                    <!-- <a href="services.html" target="_self">
                                                         <div class="column mcb-column one-third column_column ">
                                                             <div class="column_attr align_center"
-                                                                style="padding:60px 13% 45px; border: 3px solid #5c91b4; margin: 0 2%;">
+                                                                style="padding:60px 13% 45px; border: 3px solid #2A71BC; margin: 0 2%;">
                                                                 <div
                                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border">
                                                                     <div class="image_wrapper"><img
@@ -165,7 +153,7 @@
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <h4>STRATEGIC
-                                                                        RECRUITING</h4>
+                                                                    RECRUITING</h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
                                                                     We understand the power of having the right talent
@@ -177,11 +165,40 @@
                                                                 </p>
                                                             </div>
                                                         </div>
+                                                    </a> -->
+
+                                                    <a href="services.html" target="_self">
+                                                        <div class="column mcb-column one-third column_column ">
+                                                            <div class="column_attr align_center"
+                                                                style="padding:60px 13% 45px; border: 3px solid #2A71BC; margin: 0 2%;">
+
+                                                                <div
+                                                                    class="image_frame image_item no_link scale-with-grid alignnone no_border">
+                                                                    <div class="image_wrapper"><img
+                                                                            class="scale-with-grid"
+                                                                            src="content/hr/images/home_hr_iconbox1.png"
+                                                                            width="100" height="100" /> </div>
+                                                                </div>
+                                                                <hr class="no_line" style="margin: 0 auto 30px;" />
+                                                                <h4><a href="services.html" target="_self">STRATEGIC
+                                                                    RECRUITING</a></h4>
+                                                                <hr class="no_line" style="margin: 0 auto 30px;" />
+                                                                <p>
+                                                                    We understand the power of having the right talent
+                                                                    on
+                                                                    your team. Our expert recruitment services identify,
+                                                                    attract, and match top-tier candidates to your
+                                                                    company's
+                                                                    needs.
+                                                                </p>
+
+                                                            </div>
+                                                        </div>
                                                     </a>
                                                     <a href="services.html" target="_self">
                                                         <div class="column mcb-column one-third column_column ">
                                                             <div class="column_attr align_center"
-                                                                style="padding:60px 13% 45px; border: 3px solid #5c91b4; margin: 0 2%;">
+                                                                style="padding:60px 13% 45px; border: 3px solid #2A71BC; margin: 0 2%;">
 
                                                                 <div
                                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border">
@@ -191,8 +208,8 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4>EMPOWERMENT
-                                                                        COACHING</h4>
+                                                                <h4><a href="services.html" target="_self">EMPOWERMENT
+                                                                        COACHING</a></h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
                                                                     Elevate your team's efficiency and performance
@@ -209,7 +226,8 @@
                                                     <a href="services.html" target="_self">
                                                         <div class="column mcb-column one-third column_column ">
                                                             <div class="column_attr align_center"
-                                                                style="padding:60px 13% 45px; border: 3px solid #5c91b4; margin: 0 2%;">
+                                                                style="padding:60px 13% 45px; border: 3px solid #2A71BC; margin: 0 2%;">
+
                                                                 <div
                                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border">
                                                                     <div class="image_wrapper"><img
@@ -218,8 +236,8 @@
                                                                             width="100" height="100" /> </div>
                                                                 </div>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                                <h4>JOB SEEKER
-                                                                    SUPPORT</h4>
+                                                                <h4><a href="services.html" target="_self">JOB SEEKER
+                                                                        SUPPORT</a></h4>
                                                                 <hr class="no_line" style="margin: 0 auto 30px;" />
                                                                 <p>
                                                                     For job seekers, we're more than a service; we're
@@ -230,9 +248,11 @@
                                                                     perfect
                                                                     role.
                                                                 </p>
+
                                                             </div>
                                                         </div>
                                                     </a>
+
                                                 </div>
                                             </div>
                             </div>
