--- a/public/services.html
+++ b/public/services.html
@@ -95,12 +95,11 @@
 
                                 <div class="wrap mcb-wrap one  valign-top clearfix">
                                     <div class="mcb-wrap-inner">
-                                       
+
                                         <div class="">
 
-                                            <div class="services"
-                                                >
-                                                <div 
+                                            <div class="services">
+                                                <div
                                                     class="image_frame image_item no_link scale-with-grid alignnone no_border width">
                                                     <div style="margin-top: 50px;" class="image_wrapper"><img
                                                             class="scale-with-grid"
@@ -120,111 +119,108 @@
                                                 </div>
                                             </div>
                                         </div>
-                                            <div class="services"
-                                                >
-                                                <div 
-                                                    class="image_frame image_item no_link scale-with-grid alignnone no_border width">
-                                                    <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                            class="scale-with-grid"
-                                                            src="content/hr/images/home_hr_iconbox2.png" width="100"
-                                                            height="100" /> </div>
-                                                </div>
-                                                <div  class="column_attr align_center width">
-                                                    <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                    <h4>EMPOWERMENT COACHING</h4>
-                                                    <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                    <p>
-                                                        Elevate your team's efficiency and performance through
-                                                        targeted coaching. Our tailored programs are designed to
-                                                        inspire, refine skills, and optimize employee potential.
-                                                    </p>
-                                                </div>
+                                        <div class="services">
+                                            <div
+                                                class="image_frame image_item no_link scale-with-grid alignnone no_border width">
+                                                <div style="margin-top: 50px;" class="image_wrapper"><img
+                                                        class="scale-with-grid"
+                                                        src="content/hr/images/home_hr_iconbox2.png" width="100"
+                                                        height="100" /> </div>
+                                            </div>
+                                            <div class="column_attr align_center width">
+                                                <hr class="no_line" style="margin: 0 auto 30px;" />
+                                                <h4>EMPOWERMENT COACHING</h4>
+                                                <hr class="no_line" style="margin: 0 auto 30px;" />
+                                                <p>
+                                                    Elevate your team's efficiency and performance through
+                                                    targeted coaching. Our tailored programs are designed to
+                                                    inspire, refine skills, and optimize employee potential.
+                                                </p>
                                             </div>
                                         </div>
-                                            <div class="services"
-                                                >
-                                                <div 
-                                                    class="image_frame image_item no_link scale-with-grid alignnone no_border width">
-                                                    <div style="margin-top: 50px;" class="image_wrapper"><img
-                                                            class="scale-with-grid"
-                                                            src="content/hr/images/home_hr_iconbox3.png" width="100"
-                                                            height="100" /> </div>
-                                                </div>
-                                                <div  class="column_attr align_center width">
-                                                    <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                    <h4>JOB SEEKER SUPPORT</h4>
-                                                    <hr class="no_line" style="margin: 0 auto 30px;" />
-                                                    <p>
-                                                        For job seekers, we're more than a service; we're your
-                                                    partners in success. We offer guidance, preparation, and
-                                                    personalized job matching to help you find your perfect
-                                                    role.
-                                                    </p>
-                                                </div>
-                                            </div>
+                                    </div>
+                                    <div class="services">
+                                        <div
+                                            class="image_frame image_item no_link scale-with-grid alignnone no_border width">
+                                            <div style="margin-top: 50px;" class="image_wrapper"><img
+                                                    class="scale-with-grid" src="content/hr/images/home_hr_iconbox3.png"
+                                                    width="100" height="100" /> </div>
                                         </div>
-
-                                    
+                                        <div class="column_attr align_center width">
+                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <h4>JOB SEEKER SUPPORT</h4>
+                                            <hr class="no_line" style="margin: 0 auto 30px;" />
+                                            <p>
+                                                For job seekers, we're more than a service; we're your
+                                                partners in success. We offer guidance, preparation, and
+                                                personalized job matching to help you find your perfect
+                                                role.
+                                            </p>
+                                        </div>
                                     </div>
                                 </div>
+
+
                             </div>
                         </div>
-                        <div class="section the_content no_content">
-                            <div class="section_wrapper">
-                                <div class="the_content_wrapper"></div>
-                            </div>
-                        </div>
+                    </div>
+                </div>
+                <div class="section the_content no_content">
+                    <div class="section_wrapper">
+                        <div class="the_content_wrapper"></div>
                     </div>
                 </div>
             </div>
         </div>
-        <footer style="background: #000;" class="clearfix">
-            <div class="" style="padding:80px 0 60px;">
-                <div class="container">
-                    <div class="column one-second">
-                        <aside class="widget widget_text">
-                            <div class="textwidget align_right">
-                                <div class="image_frame image_item no_link scale-with-grid alignnone no_border">
-                                    <div class="image_wrapper"><img class="scale-with-grid"
-                                            src="content/hr/images/home_hr_footer_logo.png" width="90" height="59" />
-                                    </div>
+    </div>
+    </div>
+    <footer style="background: #000;" class="clearfix">
+        <div class="" style="padding:80px 0 60px;">
+            <div class="container">
+                <div class="column one-second">
+                    <aside class="widget widget_text">
+                        <div class="textwidget align_right">
+                            <div class="image_frame image_item no_link scale-with-grid alignnone no_border">
+                                <div class="image_wrapper"><img class="scale-with-grid"
+                                        src="content/hr/images/home_hr_footer_logo.png" width="90" height="59" />
                                 </div>
-                                <hr class="no_line" style="margin: 0 auto 20px;" />
-                                <p>
-                                    We're not just an HR company – we're your partners in growth. Our mission is
-                                    to
-                                    empower small and medium-sized businesses across North America to unlock
-                                    their true
-                                    potential.
-                                </p>
                             </div>
-                        </aside>
-                    </div>
-
-                    <div class="column one-second">
-                        <aside class="widget widget_text">
-                            <h4 style="color: #fff;">Contact Us</h4>
-                            <div class="textwidget">
-
-                                <p class="big">
-                                    <br> Write us: <a href="mailto:abdullah@metanoiahr.com">abdullah@metanoiahr.com</a>
-                                </p>
-                            </div>
-                        </aside>
-                    </div>
-                </div>
-            </div>
-            <div class="footer_copy">
-                <div class="container">
-                    <div class="column one">
-                        <div class="copyright">
-                            &copy; 2023 - metanoiaHR
+                            <hr class="no_line" style="margin: 0 auto 20px;" />
+                            <p>
+                                We're not just an HR company – we're your partners in growth. Our mission is
+                                to
+                                empower small and medium-sized businesses across North America to unlock
+                                their true
+                                potential.
+                            </p>
                         </div>
+                    </aside>
+                </div>
 
-                    </div>
+                <div class="column one-second">
+                    <aside class="widget widget_text">
+                        <h4 style="color: #fff;">Contact Us</h4>
+                        <div class="textwidget">
+
+                            <p class="big">
+                                <br> Write us: <a href="mailto:abdullah@metanoiahr.com">abdullah@metanoiahr.com</a>
+                            </p>
+                        </div>
+                    </aside>
                 </div>
             </div>
-        </footer>
+        </div>
+        <div class="footer_copy">
+            <div class="container">
+                <div class="column one">
+                    <div class="copyright">
+                        &copy; 2023 - metanoiaHR
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </footer>
     </div>
 
     <!-- JS -->
